--- a/BaasAdmin/BaasAdmin/templates/db.html
+++ b/BaasAdmin/BaasAdmin/templates/db.html
@@ -10,7 +10,7 @@
 				</div>
 
 				<div class="col-xs-6" style="text-align: right;">
-					<a href='#{{project.name}}'><span style="color: green; font-size: 15;" class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+					<!-- <a href='#{{project.name}}'><span style="color: green; font-size: 15;" class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a> -->
 					&nbsp;
 					<a onclick="removeProject()" href='#{{project.name}}'><span style="color: red; font-size: 15;" class="glyphicon glyphicon-remove-sign" aria-hidden="true"></span></a>
 				</div>
