--- a/BaasAdmin/BaasAdmin/templates/db.html
+++ b/BaasAdmin/BaasAdmin/templates/db.html
@@ -10,7 +10,7 @@
 				</div>
 
 				<div class="col-xs-6" style="text-align: right;">
-					<!-- <a href='#{{project.name}}'><span style="color: green; font-size: 15;" class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a> -->
+					<a onclick="createCollection()" href='#{{project.name}}'><span style="color: green; font-size: 15;" class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></a>
 					&nbsp;
 					<a onclick="removeProject()" href='#{{project.name}}'><span style="color: red; font-size: 15;" class="glyphicon glyphicon-remove-sign" aria-hidden="true"></span></a>
 				</div>
@@ -19,7 +19,7 @@
 			<div class="panel-body">
 				<ul>
 				{%for collection in project.collections %}
-					{% if not collection|first == '_' %}
+					{% if not collection|first == '_' and collection != 'system.indexes' %}
 					<li><a href="/{{project.name}}/{{collection}}">{{collection}}</a></li>
 					{% endif %}
 				{%endfor%}
@@ -36,6 +36,18 @@
 			$.get('/api/remproj?name='+'{{project.name}}', function(response){
 				location.href = '/';
 			});
+	}
+	function createCollection(){
+		var collectionName = prompt("Enter the collection name: ");
+		if (!collectionName)
+			return;
+
+		$.get('/api/newcollection?dbname={{project.name}}&collection='+collectionName, function(response){
+			if(response != 'created')
+				alert(response);
+			else
+				location.reload()
+		});
 	}
 </script>
 {% endblock %}
